# ISC-2024-EAR-tutorial

./: README.md
scripts/: config.genoa.json  config.gpu.json  config.rome.json  create_trace.sh  plot_dvfs_ear.py  plot_loops_heatmap.py
tutorials/: README.md
tutorials/dvfs/: README.md  dvfs_NPB_example_1.sh  dvfs_NPB_example_2.sh
tutorials/monitoring_ear/: GROMACS_CPU_job.sh  GROMACS_GPU_job.sh  GROMACS_SINGULARITY_GPU.sh  HemePure_CPU_job.sh  HemePure_GPU_job.sh  NPB_job.sh  Palabos_job.sh  PyTorch_job.sh  README.md
tutorials/monitoring_general/: CMakeLists.txt  README.md
tutorials/monitoring_general/src/: CMakeLists.txt  helper.h  xaxpy.cpp  xaxpy.cu  xaxpy_pmt.cpp  xaxpy_pmt.cu  xgemm.cpp  xgemm.cu  xgemm_pmt.cpp  xgemm_pmt.cu
tutorials/policies/: NPB_job.sh  README.md
tutorials/visualization/: EAR_job_data_visualization.json  README.md
